# trading-sim

./: .gitignore  Cargo.toml  docker-compose.yml  init_db.sh  proto-gen.sh
api-gateway/: Cargo.toml  build.rs  package.json
api-gateway/configuration/: base.yml
api-gateway/src/: amqp.ts  configuration.rs  index.ts  lib.rs  main.rs  orders.ts  startup.rs
api-gateway/src/routes/: order.rs
engine/: Cargo.toml
engine/benches/: orderbook_benchmark.rs
engine/src/: book.rs  configuration.rs  event_queue.rs  lib.rs  main.rs  matching_engine.rs  messages.rs
engine/tests/: order_book.rs
message-persistor/: Cargo.toml  build.rs
message-persistor/configuration/: base.yml
message-persistor/src/: amqp_receiver.rs  configuration.rs  lib.rs  main.rs  queue_loop.rs
migrations/: 20250817222054_create-orders-table.up.sql  20250817235900_create-currencies-table.up.sql  20250818000123_create-orders-table.up.sql  20250824221319_create-trades-table.up.sql
order-book/: Cargo.toml  build.rs
order-book/benches/: orderbook_benchmark.rs
order-book/configuration/: base.yml
order-book/src/: book.rs  command_queue_loop.rs  configuration.rs  lib.rs  main.rs  matching_engine.rs  order_book.rs
order-book/tests/: order_book.rs
proto/: order.proto  trading.proto
