[package]
name = "api-gateway"
version = "0.1.0"
edition = "2024"

[[bin]]
path = "src/main.rs"
name = "api-gateway"


[lib]
path="src/lib.rs"

[dependencies]
actix-web = "4.3.1"
config = "0.11"
serde = { version = "1.0.162", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8.1", features = ["v4"] }
chrono =  "0.4.15"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.1.3"
once_cell = "1.17.1"
secrecy = { version =  "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.4"
serde-aux = "3"
unicode-segmentation = "1.10.1"
claim = "0.5.0"
validator = "0.16.0"
prost = "0.14.1"
env_logger = "0.11.8"
log = "0.4.27"
rand = "0.9.2"
socket2 = "0.6.0"

[build-dependencies]
prost-build = "0.14.1"
