[package]
name = "trading-sym"
version = "0.1.0"
edition = "2024"

[lib]
name="order_book"
path="src/lib.rs"

[dependencies]
config = "0.11"
env_logger = "0.11.8"
futures-lite = "2.6.1"
lapin = "3.1.0"
log = "0.4.27"
prost = "0.14.1"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.7.0"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"

[build-dependencies]
prost-build = "0.14.1"
